# kitchen-helper-backend

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  api.py  celery_config.py  configuration.py  database.db  docker-compose.yml  entrypoint.sh  khLogging.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
common/: authentication.py  constants.py
communication/: images.proto  images_pb2.py  images_pb2.pyi  images_pb2_grpc.py  users.proto  users_pb2.py  users_pb2_grpc.py
db/: Dockerfile  connection.py  create.sql  local.db  models.py
db/migrations/: env.py
features/: __init__.py
features/health/: __init__.py  operations.py  responses.py  router.py
features/image_processing/: __init__.py  input_models.py  models.py  operations.py  responses.py  utils.py
features/images/: __init__.py  constants.py  exceptions.py  grpc_server.py  helpers.py  input_models.py  models.py  operations.py  responses.py  router.py  tasks.py
features/ingredients_api/: __init__.py  exceptions.py  init.py  input_models.py  main.py  models.py  operations.py  responses.py  router.py  tests.py  views.py
features/recipes/: __init__.py  authentication.py  constants.py  exceptions.py  helpers.py  input_models.py  models.py  operations.py  responses.py  router.py  tasks.py  test.py  tests.py
features/users/: __init__.py  authentication.py  constants.py  error_response_model.py  exceptions.py  grpc_server.py  input_models.py  (+6 more)
logings/: khLogging.py
logs/: api.log.2023-12-21
myenv/: pyvenv.cfg
tests/: fixtures.py
(+55 files in other folders)
